alerts.html에 다른 팀원이 수정

--- a/Java/GitTestApp/src/main/webapp/Alerts.html
+++ b/Java/GitTestApp/src/main/webapp/Alerts.html
@@ -58,6 +58,7 @@
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     <strong>Light!</strong> You should <a href="#" class="alert-link">read this message</a>.
   </div>
+  <h1>다른 팀원이 추가</h1>
 
 </div><!--container-->
 
