--- a/Java/GitTestApp/src/main/webapp/Alerts.html
+++ b/Java/GitTestApp/src/main/webapp/Alerts.html
@@ -58,6 +58,7 @@
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     <strong>Light!</strong> You should <a href="#" class="alert-link">read this message</a>.
   </div>
+  <h1>같은 파일을 나도 수정</h1>
 
 </div><!--container-->
 
